<resources>
    <string name="app_name">MOB_22_Clean</string>
    <string name="error_message">Something went wrong</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_desc">Enter Description</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warning_icon">Warning Icon</string>
    <string name="delete_this_item">Delete This Item</string>
    <string name="are_you_sure_you_want_to_delete_this_note_n_this_action_cannot_be_undone">Are you sure you want to delete this note? \n This action cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_registered_back_to">Already registered, back to</string>
    <string name="login">Login</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="welcome">Welcome</string>
    <string name="login_with_google">Login with Google</string>
    <string name="not_a_user">Not a user, click here to</string>
    <string name="options">Options</string>
    <string name="logout">Logout</string>
    <string name="my_notes">My Notes</string>
</resources>