<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/m"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivWarning"
            android:layout_width="@dimen/xxxxxxl"
            android:layout_height="@dimen/xxxxxxl"
            android:layout_marginTop="@dimen/xxs"
            android:contentDescription="@string/warning_icon"
            android:src="@drawable/ic_alert" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:gravity="center"
            android:text="@string/delete_this_item"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_delete_this_note_n_this_action_cannot_be_undone"
            android:textAppearance="?attr/textAppearanceBody1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/l"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/xxs"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xxs"
            android:layout_weight="1"
            android:backgroundTint="#FF5722"
            android:text="@string/delete"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>